--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://codingbeagle.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Coding Beagle"
+summaryLength = 20
